corrected alignment of drpbtn issues

--- a/app/public/assets/css/styles.css
+++ b/app/public/assets/css/styles.css
@@ -7,25 +7,26 @@ body {
 }
 
 h1 {
-    margin-left: 15px;
+    margin-left: 10px;
 }
 
 h4 {
-    margin-left: 15px;
+    margin-left: 10px;
 }
 
 .dropbtn {
     background-color: #4169E1;
     color: white;
     padding: 16px;
+    /* margin-left: 15px; */
     font-size: 16px;
     border: none;
 }
 
 .dropdown {
+    margin-left: 15px;
     position: relative;
-    display: inline-block;
-    
+    display: inline-block;    
 }
 
 .dropdown-content {
@@ -39,6 +40,7 @@ h4 {
 
 .dropdown-content a {
     color: black;
+    
     padding: 12px 16px;
     text-decoration: none;
     display: block;
